.: Expose symbols for internals https://bugs.webkit.org/show_bug.cgi?id=112194

Reviewed by Alexey Proskuryakov.

* Source/autotools/symbols.filter:

Source/WebCore: REGRESSION(r137607): Redirecting a post to a get then reloading triggers resubmit warning
https://bugs.webkit.org/show_bug.cgi?id=112194

Reviewed by Alexey Proskuryakov.

Test: http/tests/navigation/post-redirect-get-reload.php

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::willSendRequest): Matching urls aren't a reliable way of checking whether
    we are in a redirect. Check redirectResponse.isNull() instead.
* testing/Internals.cpp:
(WebCore::Internals::forceReload): Expose a means of forcing a reload like one a user generates for testing.
    Note that testRunner.queueReload() does this, but is not supported after the initial load completes,
    which makes it unsuitable for this case.
* testing/Internals.h:
* testing/Internals.idl:

Source/WebKit/win: Expose symbols for internals
https://bugs.webkit.org/show_bug.cgi?id=112194

Reviewed by Alexey Proskuryakov.

* WebKit.vcproj/WebKitExports.def.in:

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=112194.

Reviewed by Alexey Proskuryakov.

* http/tests/navigation/post-redirect-get-reload-expected.txt: Added.
* http/tests/navigation/post-redirect-get-reload.php: Added.


Canonical link: https://commits.webkit.org/130584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145735 268f45cc-cd09-0410-ab3c-d52691b4dbfc